--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-<head>
+<head >
+    <meta charset="utf-8">
     <link rel='stylesheet' href='style.css' type='text/css'>
     <script src='http://coderun.9leap.net/static/enchant.js-latest/enchant.js'></script>
     <script src='http://coderun.9leap.net/static/enchant.js-latest/plugins/nineleap.enchant.js'></script>
