--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head >
     <link rel='stylesheet' href='style.css' type='text/css'>
     <meta charset="utf-8"/>
+    <script src='howler.js'></script>
+    <script src='howler.min.js'></script>
     <script src='http://coderun.9leap.net/static/enchant.js-latest/enchant.js'></script>
     <script src='http://coderun.9leap.net/static/enchant.js-latest/plugins/nineleap.enchant.js'></script>
     <script src='http://coderun.9leap.net/static/enchant.js-latest/plugins/tl.enchant.js'></script>
